# notes

./: .gitignore  README.md  SUMMARY.md
Code/: .gitignore
Code/test/: ShelfSim.py  download_site.py  liftup.py  peppa.py  rs2.py  test.html  test.py  upload_site.py
Code/test/cmake/hello/: CMakeLists.txt
Code/test/cmake/hello/include/: hello.hpp
Code/test/cmake/hello/src/: hello.cpp
Code/test/realsense/: CMakeLists.txt  CMakeLists.txt.bak  advanced_mode.cpp  rs-save-ir.cpp  rs-save-to-disk.cpp
Code/wpa_supplicant/: hwsim_note.md
Howto/Apple/: ClearAutoAlbumRating.scpt  SystemIntegrityProtection.md  ejectAllDisks.scpt  ejectWD1T.scpt  showAllFiles.md
Howto/FlyingManual/: Keyboard Shortcut.numbers  Windows Shortcuts.md
Howto/Linux/: fixBluetooth.sh  generateSha.md  ps.md  useFind.md  watch.sh
Howto/customize/: SwitchyOmegaBypassList4GFW.txt  bash_aliases  bash_aliases.sh  bash_ignore_case.sh  bashrc_cody  bashrc_ubt18.sh  nvim.init.vim.mac  tmux.conf  vimrc  vimrc_monokai  zshrc
Howto/db/: index.sql
Howto/lang/: compileC++11.md  compileObjC.md  debugWithClang.md  python.md
Howto/linux/: automation.md  changeAptSource.md  changeAptSource.sh  changeTimeZone.md  checkUbtTime.md  find.md  fix1604locale.md  grep.md  monitoring.md  network_card.md  processControl.md  proxyUbt16.md  sed.md  viewUSBDisk.md  watch.md
Howto/mir/: basic.md  compile.md  d435.md  db.md  disk_space.md  docker_sim_on_cloud.md  logging.md  simulator.md  unpack_mir_release.md
Howto/network/: netplan.md  network_utils.md  virtual.md
ROS/: ros_node.md  turtle.md
(+457 files in other folders)
